refactor: top story endpoints to support article timeframes, endpoints were tested and everything is okay
